--- a/bop-i/operators/logic/index.html
+++ b/bop-i/operators/logic/index.html
@@ -4,28 +4,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
+    <script src="classes.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
-    <div id='card'>
-      <div><h3 id='recipe-title'>Recipe 1: Fruit Salad</h3><br>
-        <p id='recipe-desc'>A recipe that includes both types of fruit</p>
-      </div>
       <div id="container">
-        <p id="apple-text"> (has <b>3</b> apples)</p>
-          <div class="custom-select" style="width:180px;" onclick="getOperatorValue()">
-            <select id="number">
-              <option value="0"> select operator </option>
+          <div class="custom-select" id='dd-1' style="width:140px;" onclick="checkAnswer()">
+            <select id="number-1">
+              <option value="0"> select one </option>
               <option value="AND"> AND </option>
               <option value="OR"> OR </option>
               <option value="NOT"> NOT </option>
             </select>
           </div>
-          <p id="orange-text"> (has <b>3</b> oranges)</p>
-    </div>
-  </div>
+
+        <div class="custom-select" id='dd-2'style="width:140px;" onclick="checkAnswer()" display: inline>
+          <select id="number-2">
+            <option value="0"> select one </option>
+            <option value="AND"> AND </option>
+            <option value="OR"> OR </option>
+            <option value="NOT"> NOT </option>
+          </select>
+        </div>
+
+      <div class="custom-select" id='dd-3' style="width:140px;" onclick="checkAnswer()">
+        <select id="number-3">
+          <option value="0"> select one </option>
+          <option value="AND"> AND </option>
+          <option value="OR"> OR </option>
+          <option value="NOT"> NOT </option>
+        </select>
+      </div>
+</div>
 
     <script src="script.js"></script>
     <script src="sketch.js"></script>
