creating final number interaction files bc others are a hot mess

--- a/bop-i/data_types/number_FINAL/index.html
+++ b/bop-i/data_types/number_FINAL/index.html
@@ -64,8 +64,7 @@
         <option value="9">
         <option value="10">
       </datalist>
-
-      <!-- <script src="script.js"></script> this goes with SASS slider stuff-->
+      <!-- <script src="script.js"></script> -->
     <script src="sketch_slider.js"> d</script>
     <!-- <script src="app.js"></script> -->
 
