--- a/bop-i/data_types/numbers/index.html
+++ b/bop-i/data_types/numbers/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+    <script src="sketch_slider.js"></script>
   </head>
   <body>
 
