--- a/bop-i/data_types/number_FINAL/index.html
+++ b/bop-i/data_types/number_FINAL/index.html
@@ -10,45 +10,15 @@
   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.4/bootstrap-slider.js"></script>
 
-
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- <link rel="stylesheet" type="text/css" href="test_output.css"> -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.4/css/bootstrap-slider.css">
 
     <meta charset="utf-8" />
 
   </head>
   <body>
-
-
-
-
-
-
-    <div id="sketch-holder" class='child'>
-    </div>
-
-
-<!-- SASS slider code
-    <div class="range">
-  <input type="range" min="0" max="10" steps="1" value="1">
-</div>
-<ul class="range-labels">
-  <li class="active selected">0</li>
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
-  <li>4</li>
-  <li>5</li>
-  <li>6</li>
-  <li>7</li>
-  <li>8</li>
-  <li>9</li>
-  <li>10</li>
-</ul> -->
-
-
-
+    <!-- <div id="sketch-holder" class='child'>
+    </div> -->
 
       <!-- W3 slider code -->
       <input type="range" min="0" max="10" value="0" class="slider" id="myRange" step="1" list="tickmarks">
@@ -64,9 +34,6 @@
         <option value="9">
         <option value="10">
       </datalist>
-      <!-- <script src="script.js"></script> -->
-    <script src="sketch_slider.js"> d</script>
-    <!-- <script src="app.js"></script> -->
-
+    <script src="sketch.js"> d</script>
   </body>
 </html>
