finished together exercise

--- a/bop-i/data_types/data_type_together/index.html
+++ b/bop-i/data_types/data_type_together/index.html
@@ -25,7 +25,7 @@
               <option value="3">Evaluate</option>
             </select>
           </div>
-        <button id="transmit" type="button" name="transmit" onclick="checkInputs()" style="width:288px;">Transmit!</button>
+        <button id="transmit" type="button" name="transmit" onclick="checkInputs()">Transmit!</button>
     </div>
 
     <script src="script.js"></script>
