fixed operators positioning

--- a/bop-i/operators/arithmetic/index.html
+++ b/bop-i/operators/arithmetic/index.html
@@ -13,7 +13,7 @@
 
   </head>
   <body>
-    <div id="container">
+    <!-- <div id="container"> -->
         <div class="custom-select" style="width:200px;" onclick="getValue()">
           <select id="number">
             <option value="0" selected disabled>Select number</option>
@@ -28,7 +28,7 @@
             <option value="9">9</option>
           </select>
         </div>
-  </div>
+  <!-- </div> -->
 
     <script src="sketch.js"></script>
     <script src="script.js"></script>
