--- a/bop-i/operators/comparison/index.html
+++ b/bop-i/operators/comparison/index.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-    <div id="container">
+    <!-- <div id="container"> -->
         <div class="custom-select" id='dd-1' style="width:140px;" onclick="checkAnswer()">
           <select id="number-1">
             <option value="0"> select one </option>
@@ -37,7 +37,7 @@
         <option value="=="> == </option>
       </select>
     </div>
-</div>
+<!-- </div> -->
     <script src="script.js"></script>
     <script src="sketch.js"></script>
   </body>
