--- a/bop-i/operators/logic/index.html
+++ b/bop-i/operators/logic/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-      <div id="container">
+      <div class="card" id="card-one">
           <div class="custom-select" id='dd-1' style="width:140px;" onclick="checkAnswer()">
             <select id="number-1">
               <option value="0"> select one </option>
@@ -20,7 +20,9 @@
               <option value="NOT"> NOT </option>
             </select>
           </div>
+      </div>
 
+      <div class="card" id="card-two">
         <div class="custom-select" id='dd-2'style="width:140px;" onclick="checkAnswer()" display: inline>
           <select id="number-2">
             <option value="0"> select one </option>
@@ -29,7 +31,9 @@
             <option value="NOT"> NOT </option>
           </select>
         </div>
+      </div>
 
+      <div class="card" id="card-three">
       <div class="custom-select" id='dd-3' style="width:140px;" onclick="checkAnswer()">
         <select id="number-3">
           <option value="0"> select one </option>
@@ -38,7 +42,6 @@
           <option value="NOT"> NOT </option>
         </select>
       </div>
-</div>
 
     <script src="script.js"></script>
     <script src="sketch.js"></script>
