--- a/bop-i/variables/variable-intro/index.html
+++ b/bop-i/variables/variable-intro/index.html
@@ -30,18 +30,18 @@
 
       <div class="game-board">
         <!-- row one -->
-        <div class="rectangle" id="one"><p>variable one</p></div>
-        <div class="rectangle" id="two"><p>variable two</p></div>
-        <div class="rectangle" id="three"><p>variable three</p></div>
+        <div class="rectangle" id="one"><p>one</p></div>
+        <div class="rectangle" id="two"><p>two</p></div>
+        <div class="rectangle" id="three"><p>three</p></div>
 
         <!-- row two -->
-        <div class="rectangle" id="four"><p>variable four</p></div>
-        <div class="rectangle" id="five"><p>variable five</p></div>
-        <div class="rectangle" id="six"><p>variable six</p></div>
+        <div class="rectangle" id="four"><p>four</p></div>
+        <div class="rectangle" id="five"><p>five</p></div>
+        <div class="rectangle" id="six"><p>six</p></div>
         <!-- row three -->
-        <div class="rectangle" id="seven"><p>variable seven</p></div>
-        <div class="rectangle" id="eight"><p>variable eight</p></div>
-        <div class="rectangle" id="nine"><p>variable nine</p></div>
+        <div class="rectangle" id="seven"><p>seven</p></div>
+        <div class="rectangle" id="eight"><p>eight</p></div>
+        <div class="rectangle" id="nine"><p>nine</p></div>
       </div>
     </div>
   </body>
