fixed variables positioning and var iii

--- a/bop-i/variables/variable-three/index.html
+++ b/bop-i/variables/variable-three/index.html
@@ -13,9 +13,9 @@
       <div class="side-bar">
 
         <div id='container'>
-        <p class="var-name">Terrain One:</p>
+        <p class="var-name">Terrain One =</p>
 
-        <div class="custom-select" style="width:200px;" name="one-value">
+        <div class="custom-select" style="width:90%;" name="one-value">
         <select id="myselect" onfocus="this.value=''">
           <option value="0" selected disabled>Select Terrain</option>
           <option value="1">grass</option>
@@ -31,8 +31,8 @@
       </div>
     </div>
 
-        <p class="var-name">Terrain Two:</p>
-        <div class="custom-select" style="width:200px;" name="two-value">
+        <p class="var-name">Terrain Two =</p>
+        <div class="custom-select" style="width:90%;" name="two-value">
         <select id="myselect2" onfocus="this.value=''">
           <option value="0" selected disabled>Select Terrain</option>
           <option value="1">grass</option>
@@ -47,8 +47,8 @@
         </select>
       </div>
 
-        <p class="var-name">Terrain Three:</p>
-        <div class="custom-select" style="width:200px;" name="three-value"> <!-- onclick="checkFunction()">-->
+        <p class="var-name">Terrain Three =</p>
+        <div class="custom-select" style="width:90%;" name="three-value"> <!-- onclick="checkFunction()">-->
         <select id="myselect3" onfocus="this.value=''">
           <option value="0" selected disabled>Select Terrain</option>
           <option value="1">grass</option>
