--- a/bop-i/variables/variable-two/index.html
+++ b/bop-i/variables/variable-two/index.html
@@ -12,11 +12,11 @@
   <body>
     <div class="container">
       <div class="side-bar">
-        <p class="var-name" id="terrain_1">Terrain One:</p>
+        <p class="var-name" id="terrain_1">Terrain One = </p>
         <input class="box" id="input_1" type="text" onfocus="this.value=''" name="one-value" value="one">
-        <p class="var-name">Terrain Two:</p>
+        <p class="var-name">Terrain Two = </p>
         <input class="box" id="input_2" type="text" onfocus="this.value=''" name="two-value" value="two">
-        <p class="var-name">Terrain Three:</p>
+        <p class="var-name">Terrain Three = </p>
         <input class="box" id="input_3" type="text" onfocus="this.value=''" name="three-value" value="three">
               <div id='empty-div'></div>
       </div>
