--- a/bop-i/data_types/boolean/index.html
+++ b/bop-i/data_types/boolean/index.html
@@ -10,7 +10,7 @@
   </head>
   <body background="https://s3.amazonaws.com/codecademy-content/programs/code-foundations-path/bop-i/boolean/lightsoff.png" alt="Lights Off">
     <div class="heading">
-      <p id="words" class="off">Lights Off == True</p>
+      <p id="words" class="off">LightsOn = False</p>
     </div>
 
 
