--- a/bop-i/variables/variable-three/index.html
+++ b/bop-i/variables/variable-three/index.html
@@ -17,7 +17,7 @@
 
         <div class="custom-select" style="width:90%;" name="one-value">
         <select id="myselect" onfocus="this.value=''">
-          <option value="0" selected disabled>Select Terrain</option>
+          <option value="0" selected disabled>grass</option>
           <option value="1">grass</option>
           <option value="2">forest</option>
           <option value="3">rocks</option>
@@ -34,7 +34,7 @@
         <p class="var-name">Terrain Two =</p>
         <div class="custom-select" style="width:90%;" name="two-value">
         <select id="myselect2" onfocus="this.value=''">
-          <option value="0" selected disabled>Select Terrain</option>
+          <option value="0" selected disabled>rocks</option>
           <option value="1">grass</option>
           <option value="2">forest</option>
           <option value="3">rocks</option>
@@ -50,7 +50,7 @@
         <p class="var-name">Terrain Three =</p>
         <div class="custom-select" style="width:90%;" name="three-value"> <!-- onclick="checkFunction()">-->
         <select id="myselect3" onfocus="this.value=''">
-          <option value="0" selected disabled>Select Terrain</option>
+          <option value="0" selected disabled>forest</option>
           <option value="1">grass</option>
           <option value="2">forest</option>
           <option value="3">rocks</option>
