Clear index.html

--- a/bop-i/variables/variable-two/index.html
+++ b/bop-i/variables/variable-two/index.html
@@ -3,10 +3,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="script.js"></script>
-    <title></title>
+    <!-- Load jQuery here -->
   </head>
 
   <body>
@@ -39,5 +38,6 @@
         <div class="rectangle two-value" id="nine"><p>terrain two</p></div>
       </div>
     </div>
+    <!-- Load script.js here -->
   </body>
 </html>
