Do what we will do in the livestream

--- a/bop-i/variables/variable-two/index.html
+++ b/bop-i/variables/variable-two/index.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-    <!-- Load jQuery here -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -38,6 +41,6 @@
         <div class="rectangle two-value" id="nine"><p>terrain two</p></div>
       </div>
     </div>
-    <!-- Load script.js here -->
+    <script src="script.js"></script>
   </body>
 </html>
